test/negative/t5.mli.expected

*******************************
********** Parsed file ********
*******************************
[@@@gospel
  {| function p (x:integer):integer = x |}[@@gospel
                                            {| requires x
    variant x
    ensures x = 2
    ensures x > 2
    ensures x > 1 |}]]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

(*@ function p ...
    variant ...
    requires ...
    ensures ...
    ensures ...
    ensures ...
     *)
File "t5.mli", line 11, characters 10-11:
Error: Type mysmatch. Cannot match integer with bool
